Sun Apr 21 14:10:04 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-rc-style.c pixbuf.h pixbuf-draw.c: Add a fake STEPPER
	function that is used for drawing scrollbar steppers,
	so that themes that want to draw the button and arrow
	separately can override the default handling.

	* pixbuf-draw.c: Remove draw_polygon() since it was
	just a cut-and-paste of the default one. Remove
	some unused code.

2002-03-07  James Henstridge  <james@daa.com.au>

	* Makefile.am (libpixmap_la_LIBADD): link pixbuf engine against
	the gtk+ libraries, so that it can be used with programs that
	dlopen gtk+ without the RTLD_GLOBAL flag (such as scripting
	languages and mozilla).

Thu Feb  7 00:21:21 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (pixbuf_render): Add gradient
	rendering -- if the source width/height is zero,
	render a gradient from the surrounding values.

Mon Jan 28 15:34:43 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix hint computation
	again.

Mon Jan 28 12:17:07 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Fix problems in computing
	MISSING hint.

Sun Jan 27 23:58:13 2002  Owen Taylor  <otaylor@redhat.com>

	* pixbuf-render.c (compute_hint): Optimize the case
	where a component is entirely transparent by skipping
	drawing it.

	* pixbuf-rc-style.c (theme_parse_image): Catch case
	where background or overlay border/stretch are specified
	without a background image.

	* pixbuf-render.c (theme_pixbuf_destroy): Actually free
	the structure and filename.

=================== Move back into gtk-engines ====================
	
Sat Jan 19 02:45:17 2002  Owen Taylor  <otaylor@redhat.com>

	* src/pixbuf-render.c (theme_pixbuf_compute_hints): Catch
	invalid borders, and warn.

Sat Jan 19 00:32:14 2002  Owen Taylor  <otaylor@redhat.com>

	* examples/*: Add an extrodinarily ugly example.

	* src/pixbuf-draw.c (draw_simple_image): Never shape
	the window, even if we are allowed to. Shaping is