@@ -1,3 +1,8 @@
+Fri Sep  6 20:32:45 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* pixbuf-draw.c: Account for the possibility of detail == NULL
+	(#89561, Hongli Lai)
+
 Sun Apr 21 14:10:04 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* pixbuf-rc-style.c pixbuf.h pixbuf-draw.c: Add a fake STEPPER
